syntax = "proto3";

option go_package = "grpc_learning/protos"; // package info for go files 

service Currency {
    rpc GetRate(RateRequest) returns (RateResponse);
}

message RateRequest {
    string Base = 1;
    string Destination = 2;
}

message RateResponse {
    float Rate = 1;
}
